--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,7 @@ button:focus-visible {
   display: flex;
   height: 100vh;
   padding-top: 80px;
+  overflow: auto;
 }
 
 .app-sidebar {
@@ -105,7 +106,7 @@ button:focus-visible {
   flex: 1;
   margin-left: 200px;
   height: calc(100vh - 80px);
-  overflow-y: auto;
+  /*overflow-y: auto;*/
   padding: 40px;
   display: flex;
   flex-direction: column;
