--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,9 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  overflow: hidden;
+  /*overflow: hidden;*/
+  overflow-y: auto; 
+  overflow-x: hidden;
 }
 
 h1 {
@@ -87,7 +89,6 @@ button:focus-visible {
   display: flex;
   height: 100vh;
   padding-top: 80px;
-  overflow: auto;
 }
 
 .app-sidebar {
@@ -105,8 +106,8 @@ button:focus-visible {
 .app-main {
   flex: 1;
   margin-left: 200px;
-  height: calc(100vh - 80px);
-  /*overflow-y: auto;*/
+  /*height: calc(100vh - 80px);
+  overflow-y: auto;*/
   padding: 40px;
   display: flex;
   flex-direction: column;
