--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ button:focus-visible {
 .app-body {
   display: flex;
   height: 100vh;
-  padding-top: 80px;
+  padding-top: 50px;
 }
 
 .app-sidebar {
@@ -101,11 +101,13 @@ button:focus-visible {
   padding: 32px 0;
   overflow-y: auto;
   z-index: 999;
+  text-align: left;
+  align-items: flex-start;
 }
 
 .app-main {
   flex: 1;
-  margin-left: 200px;
+  margin-left: 100px;
   /*height: calc(100vh - 80px);
   overflow-y: auto;*/
   padding: 40px;
