--- a/src/index.css
+++ b/src/index.css
@@ -114,13 +114,15 @@ button:focus-visible {
 
 .app-main {
   flex: 1;
-  margin-left: 100px;
+  margin-left: 10px;
   /*height: calc(100vh - 80px);
   overflow-y: auto;*/
   padding: 40px;
   display: flex;
   flex-direction: column;
+  transition: margin-left 0.3s;
 }
+
 
 .search-container {
   width: 100%;
